5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1585_1017.log
== TEST (2019-04-01 23:32:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de P1: ")))
d = r * acos(sin(t1)*sin(t2) + cos(t1)*cos(g1 - g2))
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = r * acos(sin(t1)*sin(t2) + cos(t1)*cos(g1 - g2))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:33:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de P2: ")))
d = r * acos(sin(t1)*sin(t2) + cos(t1)*cos(g1 - g2))
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = r * acos(sin(t1)*sin(t2) + cos(t1)*cos(g1 - g2))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:36:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de P2: ")))
r = float(6371.01)
d = r * acos(sin(t1)*sin(t2) + cos(t1)*cos(g1 - g2))
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r * acos(sin(t1)*sin(t2) + cos(t1)*cos(g1 - g2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:38:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de P2: ")))
r = float(6371.01)
d = r * acos( (sin(t1) * sin(t2)) + (cos(t1) * cos(g1 - g2)) )
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r * acos( (sin(t1) * sin(t2)) + (cos(t1) * cos(g1 - g2)) )
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:39:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de P2: ")))
r = float(6371.01)
d = r * acos( (sin(t1) * sin(t2)) + (cos(t1) * cos(g1 - g2)) )
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r * acos( (sin(t1) * sin(t2)) + (cos(t1) * cos(g1 - g2)) )
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:41:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de P2: ")))
r = float(6371.01)
d = r * acos( (sin(t1) * sin(t2)) + (cos(t1) * cos(t2) * cos(g1 - g2)) )
print(round(d, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:42:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de P2: ")))
r = float(6371.01)
d = r * acos( (sin(t1) * sin(t2)) + (cos(t1) * cos(t2) * cos(g1 - g2)) )
print(round(d, 2))

-- EXECUTION TIME:
0.220503
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
